--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 121,
    "id": "ff0ea381-9ac1-4d25-8864-3cba8264b818",
    "metadata": {},
    "outputs": [
@@ -43,20 +43,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1-month   constant maturity, quoted on investment basis</th>\n",
-       "      <th>3-month   constant maturity, quoted on investment basis</th>\n",
-       "      <th>6-month   constant maturity, quoted on investment basis</th>\n",
-       "      <th>1-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>2-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>3-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>5-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>7-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>10-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>20-year   constant maturity, quoted on investment basis</th>\n",
-       "      <th>30-year   constant maturity, quoted on investment basis</th>\n",
+       "      <th>1-month</th>\n",
+       "      <th>3-month</th>\n",
+       "      <th>6-month</th>\n",
+       "      <th>1-year</th>\n",
+       "      <th>2-year</th>\n",
+       "      <th>3-year</th>\n",
+       "      <th>5-year</th>\n",
+       "      <th>7-year</th>\n",
+       "      <th>10-year</th>\n",
+       "      <th>20-year</th>\n",
+       "      <th>30-year</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Series Description</th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -231,176 +231,52 @@
        "</div>"
       ],
       "text/plain": [
-       "                   1-month   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                           \n",
-       "1962-01-02                                                        NaN        \n",
-       "1962-01-03                                                        NaN        \n",
-       "1962-01-04                                                        NaN        \n",
-       "1962-01-05                                                        NaN        \n",
-       "1962-01-08                                                        NaN        \n",
-       "...                                                               ...        \n",
-       "2022-09-28                                                       2.63        \n",
-       "2022-09-29                                                       2.78        \n",
-       "2022-09-30                                                       2.79        \n",
-       "2022-10-03                                                       2.87        \n",
-       "2022-10-04                                                       2.91        \n",
+       "           1-month 3-month 6-month 1-year 2-year 3-year 5-year 7-year 10-year  \\\n",
+       "Date                                                                            \n",
+       "1962-01-02     NaN     NaN     NaN   3.22    NaN   3.70   3.88    NaN    4.06   \n",
+       "1962-01-03     NaN     NaN     NaN   3.24    NaN   3.70   3.87    NaN    4.03   \n",
+       "1962-01-04     NaN     NaN     NaN   3.24    NaN   3.69   3.86    NaN    3.99   \n",
+       "1962-01-05     NaN     NaN     NaN   3.26    NaN   3.71   3.89    NaN    4.02   \n",
+       "1962-01-08     NaN     NaN     NaN   3.31    NaN   3.71   3.91    NaN    4.03   \n",
+       "...            ...     ...     ...    ...    ...    ...    ...    ...     ...   \n",
+       "2022-09-28    2.63    3.40    3.87   3.99   4.07   4.12   3.92   3.83    3.72   \n",
+       "2022-09-29    2.78    3.36    3.87   3.98   4.16   4.19   3.98   3.89    3.76   \n",
+       "2022-09-30    2.79    3.33    3.92   4.05   4.22   4.25   4.06   3.97    3.83   \n",
+       "2022-10-03    2.87    3.46    3.97   4.01   4.12   4.12   3.90   3.79    3.67   \n",
+       "2022-10-04    2.91    3.45    3.98   4.15   4.10   4.08   3.84   3.73    3.62   \n",
        "\n",
-       "                   3-month   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                           \n",
-       "1962-01-02                                                        NaN        \n",
-       "1962-01-03                                                        NaN        \n",
-       "1962-01-04                                                        NaN        \n",
-       "1962-01-05                                                        NaN        \n",
-       "1962-01-08                                                        NaN        \n",
-       "...                                                               ...        \n",
-       "2022-09-28                                                       3.40        \n",
-       "2022-09-29                                                       3.36        \n",
-       "2022-09-30                                                       3.33        \n",
-       "2022-10-03                                                       3.46        \n",
-       "2022-10-04                                                       3.45        \n",
-       "\n",
-       "                   6-month   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                           \n",
-       "1962-01-02                                                        NaN        \n",
-       "1962-01-03                                                        NaN        \n",
-       "1962-01-04                                                        NaN        \n",
-       "1962-01-05                                                        NaN        \n",
-       "1962-01-08                                                        NaN        \n",
-       "...                                                               ...        \n",
-       "2022-09-28                                                       3.87        \n",
-       "2022-09-29                                                       3.87        \n",
-       "2022-09-30                                                       3.92        \n",
-       "2022-10-03                                                       3.97        \n",
-       "2022-10-04                                                       3.98        \n",
-       "\n",
-       "                   1-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                          \n",
-       "1962-01-02                                                       3.22       \n",
-       "1962-01-03                                                       3.24       \n",
-       "1962-01-04                                                       3.24       \n",
-       "1962-01-05                                                       3.26       \n",
-       "1962-01-08                                                       3.31       \n",
-       "...                                                               ...       \n",
-       "2022-09-28                                                       3.99       \n",
-       "2022-09-29                                                       3.98       \n",
-       "2022-09-30                                                       4.05       \n",
-       "2022-10-03                                                       4.01       \n",
-       "2022-10-04                                                       4.15       \n",
-       "\n",
-       "                   2-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                          \n",
-       "1962-01-02                                                        NaN       \n",
-       "1962-01-03                                                        NaN       \n",
-       "1962-01-04                                                        NaN       \n",
-       "1962-01-05                                                        NaN       \n",
-       "1962-01-08                                                        NaN       \n",
-       "...                                                               ...       \n",
-       "2022-09-28                                                       4.07       \n",
-       "2022-09-29                                                       4.16       \n",
-       "2022-09-30                                                       4.22       \n",
-       "2022-10-03                                                       4.12       \n",
-       "2022-10-04                                                       4.10       \n",
-       "\n",
-       "                   3-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                          \n",
-       "1962-01-02                                                       3.70       \n",
-       "1962-01-03                                                       3.70       \n",
-       "1962-01-04                                                       3.69       \n",
-       "1962-01-05                                                       3.71       \n",
-       "1962-01-08                                                       3.71       \n",
-       "...                                                               ...       \n",
-       "2022-09-28                                                       4.12       \n",
-       "2022-09-29                                                       4.19       \n",
-       "2022-09-30                                                       4.25       \n",
-       "2022-10-03                                                       4.12       \n",
-       "2022-10-04                                                       4.08       \n",
-       "\n",
-       "                   5-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                          \n",
-       "1962-01-02                                                       3.88       \n",
-       "1962-01-03                                                       3.87       \n",
-       "1962-01-04                                                       3.86       \n",
-       "1962-01-05                                                       3.89       \n",
-       "1962-01-08                                                       3.91       \n",
-       "...                                                               ...       \n",
-       "2022-09-28                                                       3.92       \n",
-       "2022-09-29                                                       3.98       \n",
-       "2022-09-30                                                       4.06       \n",
-       "2022-10-03                                                       3.90       \n",
-       "2022-10-04                                                       3.84       \n",
-       "\n",
-       "                   7-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                          \n",
-       "1962-01-02                                                        NaN       \n",
-       "1962-01-03                                                        NaN       \n",
-       "1962-01-04                                                        NaN       \n",
-       "1962-01-05                                                        NaN       \n",
-       "1962-01-08                                                        NaN       \n",
-       "...                                                               ...       \n",
-       "2022-09-28                                                       3.83       \n",
-       "2022-09-29                                                       3.89       \n",
-       "2022-09-30                                                       3.97       \n",
-       "2022-10-03                                                       3.79       \n",
-       "2022-10-04                                                       3.73       \n",
-       "\n",
-       "                   10-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                           \n",
-       "1962-01-02                                                       4.06        \n",
-       "1962-01-03                                                       4.03        \n",
-       "1962-01-04                                                       3.99        \n",
-       "1962-01-05                                                       4.02        \n",
-       "1962-01-08                                                       4.03        \n",
-       "...                                                               ...        \n",
-       "2022-09-28                                                       3.72        \n",
-       "2022-09-29                                                       3.76        \n",
-       "2022-09-30                                                       3.83        \n",
-       "2022-10-03                                                       3.67        \n",
-       "2022-10-04                                                       3.62        \n",
-       "\n",
-       "                   20-year   constant maturity, quoted on investment basis  \\\n",
-       "Series Description                                                           \n",
-       "1962-01-02                                                       4.07        \n",
-       "1962-01-03                                                       4.07        \n",
-       "1962-01-04                                                       4.06        \n",
-       "1962-01-05                                                       4.07        \n",
-       "1962-01-08                                                       4.08        \n",
-       "...                                                               ...        \n",
-       "2022-09-28                                                       3.98        \n",
-       "2022-09-29                                                       4.00        \n",
-       "2022-09-30                                                       4.08        \n",
-       "2022-10-03                                                       4.00        \n",
-       "2022-10-04                                                       3.95        \n",
-       "\n",
-       "                   30-year   constant maturity, quoted on investment basis  \n",
-       "Series Description                                                          \n",
-       "1962-01-02                                                        NaN       \n",
-       "1962-01-03                                                        NaN       \n",
-       "1962-01-04                                                        NaN       \n",
-       "1962-01-05                                                        NaN       \n",
-       "1962-01-08                                                        NaN       \n",
-       "...                                                               ...       \n",
-       "2022-09-28                                                       3.70       \n",
-       "2022-09-29                                                       3.71       \n",
-       "2022-09-30                                                       3.79       \n",
-       "2022-10-03                                                       3.73       \n",
-       "2022-10-04                                                       3.70       \n",
+       "           20-year 30-year  \n",
+       "Date                        \n",
+       "1962-01-02    4.07     NaN  \n",
+       "1962-01-03    4.07     NaN  \n",
+       "1962-01-04    4.06     NaN  \n",
+       "1962-01-05    4.07     NaN  \n",
+       "1962-01-08    4.08     NaN  \n",
+       "...            ...     ...  \n",
+       "2022-09-28    3.98    3.70  \n",
+       "2022-09-29    4.00    3.71  \n",
+       "2022-09-30    4.08    3.79  \n",
+       "2022-10-03    4.00    3.73  \n",
+       "2022-10-04    3.95    3.70  \n",
        "\n",
        "[15851 rows x 11 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Import Constant Maturity Treasury Rate\n",
     "treasuries = pd.read_csv(\n",
     "    \"constant_maturity_treasury_rates.csv\",\n",
-    "    index_col=\"Series Description\",\n",
+    "    index_col=\"Date\",\n",
     "    parse_dates=True,\n",
     "    infer_datetime_format=True\n",
     ")\n",
-    "treasuries"
+    "\n",
+    "# Import Gold Prices"
    ]
   },
   {
